--- a/styles/contact.css
+++ b/styles/contact.css
@@ -32,6 +32,7 @@
     justify-content: center;
     align-content: center;
     gap: 64px;
+    margin-top: 64px;
 }
 
 
