--- a/styles/hero.css
+++ b/styles/hero.css
@@ -51,6 +51,7 @@ max-width: 500px;
         padding: 6vw;
         padding-top: 100px;
         padding-bottom: 100px;
+        align-items: flex-start;
     }
 
     #hero h1 {
