--- a/styles/services.css
+++ b/styles/services.css
@@ -52,6 +52,7 @@
 
 .service-plans > p:last-of-type {
     text-align: center;
+    max-width: 750px;
 }
 
 .service-plans_item-wrapper {
